Fix actiontext wording overflow

--- a/app/webpacker/src/stylesheets/metronic/actiontext.scss
+++ b/app/webpacker/src/stylesheets/metronic/actiontext.scss
@@ -39,3 +39,9 @@
 trix-editor.form-control {
   height: auto;
 }
+
+trix-editor {
+  &.customized-min-height {
+    min-height: 15em;
+  }
+}
