--- a/app/webpacker/src/stylesheets/metronic/motif/contacts.scss
+++ b/app/webpacker/src/stylesheets/metronic/motif/contacts.scss
@@ -1,7 +1,3 @@
-.rich-text-height {
-  height: 150px !important;
-}
-
 .contact-detail-wrapper {
   background-color: #F5F6F9;
 }
